--- a/style.css
+++ b/style.css
@@ -37,4 +37,51 @@ table {
   text-align: center;
   font-size: larger;
   margin-top: 20px;
+  margin-bottom: 40px;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px 0;
+  margin: 0;
+  text-align: center;
+}
+
+/* img {
+  width: 200px;
+  display: block;
+} */
+/* p {
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 5px;
+} */
+/* button {
+  background: white;
+  color: black;
+  margin-top: 10px;
+  border: 1px solid black;
+  padding: 10px 16px;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 20px;
+} */
+
+span {
+  border-bottom: 2px solid black;
+  padding: 4px;
+}
+
+button {
+  margin: 20px 0;
+  background: white;
+  color: black;
+  border: 1px solid black;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 5px 8px;
+}
+
+#error {
+  color: red;
+  font-weight: 200;
 }
